# hope-seL4-app-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.isp  README.md  settings.cmake  setup.sh
projects/bootstrap_main/: CMakeLists.txt
projects/bootstrap_main/src/: bootstrap.c
